[tool.poetry]
name = "statapp"
version = "0.3.0"
description = ""
authors = [
    "Maxim Slipenko <statapp@maks1ms.addy.io>"
]
readme = "README.md"

[tool.poetry.dependencies]
# windows 7 support
python = ">=3.8,<3.9"
pre-commit = "^3.4.0"
pyinstaller = "^6.0.0"
pandas = "^2.0"
pyside2 = "^5.15.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
