[tool.poetry]
name = "statapp"
version = "0.12.4"
description = ""
authors = [
    "Maxim Slipenko <statapp@maks1ms.addy.io>"
]
readme = "README.md"

[tool.poetry.dependencies]
# windows 7 support
python = ">=3.8,<3.9"
pre-commit = "^3.4.0"
pyinstaller = "^6.0.0"
pyside2 = "^5.15.2.1"
pandas = { version = "^2", markers = "python_version < '3.9'" }
pylint = { version = "^2", markers = "python_version < '3.9'" }
numpy = "1.20.3"
scipy = "1.9.1"
# openpyxl = "^3.1.2"
sympy = "^1.12"
matplotlib = "*" # = "3.7.5"
pillow = "9.5"
scikit-learn = "1.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
